--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "homepage": "https://github.com/acornejo/knockout-extras",
   "authors": [
-    "Alex Cornejo <acornejo@gmail.com>"
+    "Alex Cornejo"
   ],
   "description": "Collection of Knockout Utilities",
   "keywords": [
